--- a/index.haml
+++ b/index.haml
@@ -25,9 +25,9 @@
               .nav-logo
                 %img{:src => "img/kickarts-logo-new-icon.png", :alt => "KickArts Logo Icon"}/
               .nav-title
-                %span{:style => "font-weight: 400"}>KICK
+                %span.title-thin>KICK
                 ARTS
-                %span{:style => "font-weight: 400"}>.org.nz
+                %span.title-thin>.org.nz
           %span.menu-button.menu-open
           %ul
             %li
