fixes menu-bar for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1215,6 +1215,16 @@ footer p {
   font-size: 0.85rem; }
 
 @media only screen and (min-width: 1px) and (max-width: 799px) {
+  .top-bar {
+    height: 3.4rem; }
+
+  .nav-title {
+    font-size: 1.6rem; }
+
+  .nav-logo img {
+    width: 2rem;
+    height: auto; }
+
   nav ul {
     position: absolute;
     width: 50%;
@@ -1237,9 +1247,8 @@ footer p {
   nav .menu-button {
     display: block;
     float: right;
-    line-height: 3rem;
+    line-height: 2.3rem;
     margin-right: 1rem;
-    margin-top: .55rem;
     cursor: pointer;
     -webkit-transition: all 100ms ease;
             transition: all 100ms ease; }
