--- a/css/main.css
+++ b/css/main.css
@@ -1215,6 +1215,21 @@ footer p {
   font-size: 0.85rem; }
 
 @media only screen and (min-width: 1px) and (max-width: 799px) {
+  /* Header */
+  .logo-title {
+    font-size: 3.8rem; }
+
+  .subtitle {
+    font-size: 1rem !important; }
+
+  .logo img {
+    width: 5rem;
+    height: auto; }
+
+  .details {
+    font-size: .7rem !important; }
+
+  /*     NAV */
   .top-bar {
     height: 3.4rem; }
 
