--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -33,14 +33,16 @@
         width: 50%;
         height: 1200px;
         opacity: 1;
-        margin-top: 4rem;
+        margin-top: 2.4rem;
         margin-right: -120%;
         border-top: 0;
         background: whitesmoke;
         transition: all 400ms ease;
         li {
-          padding-right: 1rem;
-          font-size: .9rem;
+          padding-right: 2rem;
+          padding-left: 0;
+          padding-top: .3rem;
+          font-size: 1rem;
           text-align: right;
           display: block;
           line-height: 2.3rem;
@@ -52,8 +54,7 @@
       .menu-button {
         display: block;
         float: right;
-        line-height: 2.3rem;
-        margin-right: 1rem;
+        line-height: 2.6rem;
         cursor: pointer;
         transition: all 100ms ease;
         &:hover {
