--- a/css/main.css
+++ b/css/main.css
@@ -821,10 +821,18 @@ input, select {
   width: 20rem;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.3);
   color: #77777F; }
-  @media (max-width: 799px) {
-    #year-select {
-      width: 25rem; } }
 
+@media (max-width: 799px) {
+  #year-select {
+    width: 100%; }
+
+  .form-search {
+    width: 100%; }
+
+  input, select {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0; } }
 input + label {
   display: block;
   cursor: text;
@@ -877,16 +885,13 @@ input:focus + label {
   .search-btn:active {
     position: relative;
     top: 1px; }
-  @media (max-width: 799px) {
-    .search-btn {
-      margin-left: 8rem; } }
 
 @media (max-width: 799px) {
-  .search-btn-list {
-    margin-left: 9rem; } }
+  .search-btn {
+    margin: .9 auto 0 auto; } }
 
 @media (max-width: 799px) {
-  .form-container {
+  .form-container, form {
     *zoom: 1;
     width: auto;
     max-width: 25rem;
@@ -896,10 +901,10 @@ input:focus + label {
     margin-left: auto;
     padding-left: 0;
     padding-right: 0; }
-    .form-container:before, .form-container:after {
+    .form-container:before, .form-container:after, form:before, form:after {
       content: '';
       display: table; }
-    .form-container:after {
+    .form-container:after, form:after {
       clear: both; } }
 
 .search-dscrp {
@@ -1265,6 +1270,7 @@ footer p {
     display: block;
     float: right;
     line-height: 2.6rem;
+    margin-right: .8rem;
     cursor: pointer;
     -webkit-transition: all 100ms ease;
             transition: all 100ms ease; }
