--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -55,6 +55,7 @@
         display: block;
         float: right;
         line-height: 2.6rem;
+        margin-right: .8rem;
         cursor: pointer;
         transition: all 100ms ease;
         &:hover {
