--- a/css/search.scss
+++ b/css/search.scss
@@ -38,13 +38,23 @@ input, select {
     border-bottom: .3rem solid #955CA5;
   }
 }
-#year-select{
+#year-select {
   height: 2.6rem;
   width: 20rem;
   box-shadow:inset 0 1px 3px rgba(0,0,0,.30);
   color: #77777F;
-  @include breakpoint($small) {
-    width: 25rem;
+}
+@include breakpoint($small) {
+  #year-select {
+    width: 100%;
+  }
+  .form-search {
+    width: 100%;
+  }
+  input, select {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -100,16 +110,13 @@ input:focus + label {
     position: relative;
     top: 1px;
   }
+}
+.search-btn {
   @include breakpoint($small) {
-    margin-left: 8rem;
+    margin: .9 auto 0 auto;
   }
 }
-.search-btn-list {
-  @include breakpoint($small) {
-    margin-left: 9rem;
-  }
-}
-.form-container {
+.form-container, form {
   @include breakpoint($small) {
     @include center(25rem);
   }
