--- a/css/main.scss
+++ b/css/main.scss
@@ -67,6 +67,9 @@
     &:hover {
       color: darken($link, 10%);
     }
+    @include breakpoint($small) {
+      font-size: .7rem;
+    }
   }
   li {
     display: inline;
