--- a/index.haml
+++ b/index.haml
@@ -9,8 +9,9 @@
     %link{:href => "css/main.css", :rel => "stylesheet"}/
     %link{:href => "img/favicon.png", :rel => "icon"}/
     %link{:href => "img/apple-touch-icon-precomposed.png", :rel => "apple-touch-icon-precomposed"}/
-    %script{:src => "js/min/modernizr.js"}
     %script{:src => "js/min/jquery-1.11.3.min.js"}
+    %script{:src => "js/min/modernizr.js"}
+    %script{:src => "js/min/defiant.js"}
     %script{:src => "js/min/match-height.js", :type => "text/javascript"}
     %script{:src => "js/min/app-min.js"}
   %body
@@ -353,7 +354,6 @@
             %li
               %a{:href => "https://twitter.com/KickArtsRadio", :target => '_blank'}
                 .fa.fa-twitter
-  %script{:src => "js/min/defiance.js"}
   %script{:src => "raw.tag", :type => "riot/tag"}
   %script{:src => "episode.tag", :type => "riot/tag"}
   %script{:src => "episode-list.tag", :type => "riot/tag"}
