finishes custom audio player functionality

--- a/css/main.scss
+++ b/css/main.scss
@@ -655,6 +655,11 @@ h2 {
   background: #6d6d6d;
   border: solid #424242;
 }
+
+.show-pointer {
+  cursor: pointer;
+}
+
 .custom-player {
 	width: 480px;
 	height: 60px;
