--- a/css/main.scss
+++ b/css/main.scss
@@ -617,7 +617,7 @@ h2 {
   padding: 1rem 1rem 1rem 2.3rem;
   height: 12rem;
   @include breakpoint($small) {
-    padding: 1rem 0rem 1rem .6rem;
+    padding: 1rem 0rem 1rem 1.2rem;
   }
 }
 .player {
@@ -690,7 +690,7 @@ h2 {
 	width: 480px;
 	height: 60px;
   @include breakpoint($xsmall) {
-    width: 296px;
+    width: 240px;
   }
 }
 
