--- a/css/main.css
+++ b/css/main.css
@@ -1242,7 +1242,8 @@ h2 {
   width: 74.25%;
   margin-left: 0%;
   margin-right: 3%;
-  margin-bottom: .5rem; }
+  margin-bottom: .5rem;
+  text-align: right; }
   .box-col-3-media-75:before, .box-col-3-media-75:after {
     content: '';
     display: table; }
