--- a/css/main.scss
+++ b/css/main.scss
@@ -166,17 +166,23 @@
 }
 
 .left-panel {
-  @include breakpoint($small) {
-    p {
-      font-size: .8rem;
-      padding-bottom: .6rem;
+  p {
+    padding-left: .3rem;
+    @include breakpoint($small) {
+      padding-left: .6rem
     }
+  }
+  @include breakpoint($small) {
+    font-size: .8rem;
+    padding-top: 1rem;
   }
 }
 .right-panel {
+  margin-right: 1rem;
   @include breakpoint($small) {
     padding: .1rem;
     margin-top: .4rem;
+    padding-top:1rem;
     span {
       padding-top: .6rem;
       font-size: .8rem;
@@ -615,7 +621,6 @@ h2 {
   color: #4D4D4D;
   background: whitesmoke;
   padding: 1rem 1rem 1rem 2.3rem;
-  height: 12rem;
   @include breakpoint($small) {
     padding: 1rem 0rem 1rem 1.2rem;
   }
@@ -635,17 +640,11 @@ h2 {
 .box-col-3-media-25 {
   @include column(1/4, $uncycle: 1, $cycle: 2);
   margin-bottom: .5rem;
-  @include breakpoint($small) {
-    @include stack();
-    text-align: center;
-  }
+  text-align: right;
 }
 .box-col-3-media-25-no-stack {
   @include column(1/4, $uncycle: 1, $cycle: 2);
   margin-bottom: .5rem;
-  @include breakpoint($small) {
-    @include column(1/5, $uncycle: 1, $cycle: 2);
-  }
 }
 .box-col-3-media-50 {
   @include column(1/2, $uncycle: 1, $cycle: 2);
@@ -657,31 +656,30 @@ h2 {
 .box-col-3-media-75 {
   @include column(3/4, $uncycle: 1, $cycle: 2);
   margin-bottom: .5rem;
-  text-align: right;
-  @include breakpoint($small) {
-    @include stack();
-  }
 }
 .box-col-3-media-75-no-stack {
   @include column(3/4, $uncycle: 1, $cycle: 2);
   margin-bottom: .5rem;
-  @include breakpoint($small) {
-    @include column(4/5, $uncycle: 1, $cycle: 2);
-  }
 }
 
 // AUDIO Player
 .time {
-  margin-top: 1.1rem;
-  margin-left: 1.2rem;
-  display: inline;
-  float: left;
-  width: 1.9rem;
-  padding:5px 8px;
-  font-size: 1rem;
-  color: #fff;
+  margin-left: 0.5rem;
+  display: inline-block;
+  text-align: center;
+  width: 2rem;
+  padding: 4px 11px 0px 10px;
+  font-size: .9rem;
+  color: #FFFFFF;
   background: #00BCD4;
+  border-radius: 25px;
+  line-height: normal;
   border: solid #99D4D6;
+  vertical-align: middle;
+  @include breakpoint(max-width 440px) {
+    margin-top: .35rem;
+    margin-left: 0;
+  }
 }
 
 .show-pointer {
@@ -689,26 +687,27 @@ h2 {
 }
 
 .custom-player {
-	width: 480px;
+	width: auto;
 	height: 60px;
-  @include breakpoint($xsmall) {
-    width: 240px;
+  padding-top: 20px;
+  text-align: center;
+  @include breakpoint($small) {
+    padding-top: 1.55rem;
   }
 }
 
 .timeline {
-  display: inline;
-	width: 25rem;
+  display: inline-block;
+	width: 300px;
 	height: 20px;
-	margin-top: 24px;
-	float: left;
 	border-radius: 15px;
 	background: rgba(153, 212, 214, 1);
+  vertical-align: middle;
   @include breakpoint($small) {
-    width: 20rem;
+    width: 200px;
   }
   @include breakpoint($xsmall) {
-    width: 10rem;
+    width: 160px;
   }
 }
 .playhead {
@@ -719,12 +718,19 @@ h2 {
 	background: #00BCD4;
 }
 
-.circle-icon {
+.circle-icon-play {
   font-size: 1.6rem;
   border: solid 8px #00BCD4;
-  border-radius: 100%;
-  padding: .4rem;
-  margin: .3rem 0 .3rem 0;
+  border-radius: 50%;
+  padding: .4rem .4rem .4rem .8rem;
+  margin: .3rem 0;
+}
+.circle-icon-pause {
+  font-size: 1.6rem;
+  border: solid 8px #00BCD4;
+  border-radius: 50%;
+  padding: .4rem .55rem .4rem .55rem;
+  margin: .3rem 0;
 }
 
 // COVER
