--- a/css/main.scss
+++ b/css/main.scss
@@ -739,7 +739,7 @@ h2 {
   position: relative;
   height: 16rem;
   background-size: cover;
-  background-position: 25% 75%;
+  background-position: top;
   h2 {
     font-size: 1.5rem;
     opacity: .8;
