--- a/css/main.css
+++ b/css/main.css
@@ -736,6 +736,9 @@ header {
     font-size: 1.3rem;
     display: inline;
     letter-spacing: .15rem; }
+    @media (max-width: 450px) {
+      .card-title h3 {
+        font-size: 1rem; } }
 
 .card-icon {
   float: right;
