--- a/css/main.scss
+++ b/css/main.scss
@@ -447,6 +447,9 @@ header {
     font-size: 1.3rem;
     display: inline;
     letter-spacing: .15rem;
+    @include breakpoint(max-width 450px) {
+      font-size: 1rem;
+    }
   }
 }
 .card-icon {
