--- a/index.haml
+++ b/index.haml
@@ -50,8 +50,11 @@
         %h1.logo
           %img{:src => "img/kickarts-logo-new-icon.png", :alt => ""}/
           .logo-title
-            %span.thin>KICK
-            %span.bold ARTS
+            %p.banner
+              %span.banner-highest-rating Planet FM's #2 highest rating show
+            %p.main-title
+              %span.thin>KICK
+              %span.bold ARTS
             %p.subtitle
               Auckland's Comprehensive ArtShow.
             %p.details
