--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -17,6 +17,12 @@
     .details {
       font-size: .7rem !important;
     }
+    .banner {
+      margin-bottom: .5rem;
+    }
+    .banner-highest-rating {
+      padding: 0 .3rem .1rem .3rem;
+    }
 /*     NAV */
     .top-bar {
       height: 3.4rem;
